--- a/experiment1.ini
+++ b/experiment1.ini
@@ -1,5 +1,6 @@
 workingDirectory = "~/downloads/data/20140207/"
 target =tBidGreaterThanAskInNext100
 
+[features]
 feature1 = fBidP0OfCurrentRow
 feature2 = fLTPOfCurrentRow
