--- a/ob/e2/design.ini
+++ b/ob/e2/design.ini
@@ -1,5 +1,22 @@
 target =tBidGreaterThanAskInNext100
 
 [features]
-feature1 = fAskP0OfCurrentRow
-feature2 = fLTPOfCurrentRow
+feature1 = fBidP0OfCurrentRow
+feature2 = fBidP1OfCurrentRow
+feature3 = fBidP2OfCurrentRow
+feature4 = fBidP3OfCurrentRow
+feature5 = fBidP4OfCurrentRow
+
+feature6 = fAskP0OfCurrentRow
+feature7 = fAskP1OfCurrentRow
+feature8 = fAskP2OfCurrentRow
+feature9 = fAskP3OfCurrentRow
+feature10 = fAskP4OfCurrentRow
+
+feature11 = fRatioOfBidAskQ0OfCurrentRow
+feature12 = fRatioOfBidAskQ1OfCurrentRow
+feature13 = fRatioOfBidAskQ2OfCurrentRow
+feature14 = fRatioOfBidAskQ3OfCurrentRow
+feature15 = fRatioOfBidAskQ4OfCurrentRow
+
+feature16 = fLTPOfCurrentRow
