--- a/ob/e4/design.ini
+++ b/ob/e4/design.ini
@@ -1,5 +1,5 @@
 target =tBidEqualToAskInNext100
 
 [features]
-feature1 = fRatioOfBidQSumAskQSum
+feature1 = fRatioOfBidQSumAskQSumOfCurrentRow
 feature2 = fRatioOfBidAskQ0OfCurrentRow
