--- a/ob/e7.1/design.ini
+++ b/ob/e7.1/design.ini
@@ -1,25 +1,25 @@
 target =tBidEqualToAskInNext100
 
 [features]
-feature1 = fBidP0OfCurrentRow
-feature2 = fBidP1OfCurrentRow
+feature1 = fColBidP0OfCurrentRow
+feature2 = fColBidP1OfCurrentRow
 
-feature3 = fAskP0OfCurrentRow
-feature4 = fAskP1OfCurrentRow
+feature3 = fColAskP0OfCurrentRow
+feature4 = fColAskP1OfCurrentRow
 
-feature5 = fBidQ0OfCurrentRow
-feature6 = fBidQ1OfCurrentRow
-feature7 = fBidQ2OfCurrentRow
-feature8 = fBidQ3OfCurrentRow
-feature9 = fBidQ4OfCurrentRow
+feature5 = fColBidQ0OfCurrentRow
+feature6 = fColBidQ1OfCurrentRow
+feature7 = fColBidQ2OfCurrentRow
+feature8 = fColBidQ3OfCurrentRow
+feature9 = fColBidQ4OfCurrentRow
 
-feature10 = fAskQ0OfCurrentRow
-feature11 = fAskQ1OfCurrentRow
-feature12 = fAskQ2OfCurrentRow
-feature13 = fAskQ3OfCurrentRow
-feature14 = fAskQ4OfCurrentRow
+feature10 = fColAskQ0OfCurrentRow
+feature11 = fColAskQ1OfCurrentRow
+feature12 = fColAskQ2OfCurrentRow
+feature13 = fColAskQ3OfCurrentRow
+feature14 = fColAskQ4OfCurrentRow
 
-feature15 = fLTPOfCurrentRow
+feature15 = fColLTPOfCurrentRow
 feature16 = fRatioOfBidQSumAskQSumOfCurrentRow
 feature17 = fEMovingAverageOfLast500RowsInColBidP0
 
