--- a/ob/e8/design.ini
+++ b/ob/e8/design.ini
@@ -2,4 +2,4 @@ target =tBidEqualToAskInNext100
 
 [features]
 feature1 = fBidP0OfCurrentRow
-feature2 = fBidP1OfCurrentRow
+feature2 = fMovingAverageOfLast10RowsOfColAskP0
