--- a/ob/e7.1/design.ini
+++ b/ob/e7.1/design.ini
@@ -1,25 +1,25 @@
 target =tBidEqualToAskInNext100
 
 [features]
-feature1 = fColBidP0OfCurrentRow
-feature2 = fColBidP1OfCurrentRow
+feature1 = fColBidP0InCurrentRow
+feature2 = fColBidP1InCurrentRow
 
-feature3 = fColAskP0OfCurrentRow
-feature4 = fColAskP1OfCurrentRow
+feature3 = fColAskP0InCurrentRow
+feature4 = fColAskP1InCurrentRow
 
-feature5 = fColBidQ0OfCurrentRow
-feature6 = fColBidQ1OfCurrentRow
-feature7 = fColBidQ2OfCurrentRow
-feature8 = fColBidQ3OfCurrentRow
-feature9 = fColBidQ4OfCurrentRow
+feature5 = fColBidQ0InCurrentRow
+feature6 = fColBidQ1InCurrentRow
+feature7 = fColBidQ2InCurrentRow
+feature8 = fColBidQ3InCurrentRow
+feature9 = fColBidQ4InCurrentRow
 
-feature10 = fColAskQ0OfCurrentRow
-feature11 = fColAskQ1OfCurrentRow
-feature12 = fColAskQ2OfCurrentRow
-feature13 = fColAskQ3OfCurrentRow
-feature14 = fColAskQ4OfCurrentRow
+feature10 = fColAskQ0InCurrentRow
+feature11 = fColAskQ1InCurrentRow
+feature12 = fColAskQ2InCurrentRow
+feature13 = fColAskQ3InCurrentRow
+feature14 = fColAskQ4InCurrentRow
 
-feature15 = fColLTPOfCurrentRow
-feature16 = fRatioOfBidQSumAskQSumOfCurrentRow
-feature17 = fEMovingAverageOfLast500RowsInColBidP0
+feature15 = fColLTPInCurrentRow
+feature16 = fRatioOfBidQSumAskQSumInCurrentRow
+feature17 = fEMovingAverageOfColBidP0InLast500Rows
 
