--- a/ob/e8/design.ini
+++ b/ob/e8/design.ini
@@ -1,5 +1,5 @@
 target =tBidEqualToAskInNext100
 
 [features]
-feature1 = fBidP0OfCurrentRow
-feature2 = fMovingAverageOfLast10RowsOfColAskP0
+feature1 = fColBidP0InCurrentRow
+feature2 = fMovingAverageOfColAskP0InLast10Rows
