--- a/ob/e3.1/design.ini
+++ b/ob/e3.1/design.ini
@@ -26,3 +26,4 @@ feature19 = fColAskQ3InCurrentRow
 feature20 = fColAskQ4InCurrentRow
 
 feature21 = fColLTPInCurrentRow
+feature22 = fRatioOfBidQSumAskQSumInCurrentRow
