--- a/ob/e/3.70/design.ini
+++ b/ob/e/3.70/design.ini
@@ -1,22 +1,21 @@
 target =  tAverageOfNFutureLTPIsGreaterThanCurrentLTP
 
 [features]
-feature1 = fColBidQ0InCurrentRow
-feature2 = fColBidQ1InCurrentRow
-feature3 = fColBidQ2InCurrentRow
-feature4 = fColBidQ3InCurrentRow
-feature5 = fColBidQ4InCurrentRow
+A = fColBidQ0InCurrentRow
+B = fColBidQ1InCurrentRow
+C = fColBidQ2InCurrentRow
+D = fColBidQ3InCurrentRow
+E = fColBidQ4InCurrentRow
 
-feature6 = fColAskQ0InCurrentRow
-feature7 = fColAskQ1InCurrentRow
-feature8 = fColAskQ2InCurrentRow
-feature9 = fColAskQ3InCurrentRow
-feature10 = fColAskQ4InCurrentRow
+F = fColAskQ0InCurrentRow
+G = fColAskQ1InCurrentRow
+H = fColAskQ2InCurrentRow
+I = fColAskQ3InCurrentRow
+J = fColAskQ4InCurrentRow
 
+K = fRatioOfBidQSumAskQSumInCurrentRow
+L = fEMovingAverageOfColBidP0InLast500Rows
+M = fMovingAverageOfColBidP0InLast500Rows
+N = fColLTPInCurrentRow
 
-feature11 = fRatioOfBidQSumAskQSumInCurrentRow
-feature12 = fEMovingAverageOfColBidP0InLast500Rows
-feature13 = fMovingAverageOfColBidP0InLast500Rows
-feature14 = fColLTPInCurrentRow
-
-feature15 = fColBidP0InCurrentRow
+O = fColBidP0InCurrentRow
