--- a/ob/e/4/design.ini
+++ b/ob/e/4/design.ini
@@ -1,5 +1,16 @@
 target =tBidEqualToAskInNext100
 
 [features]
-feature1 = fRatioOfBidQSumAskQSumOfCurrentRow
-feature2 = fRatioOfBidAskQ0OfCurrentRow
+A = fRatioOfBidQSumAskQSumOfCurrentRow
+B = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColBidInLast500Qty
+C = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColBidInLast1500Qty
+D = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColBidInLast3000Qty
+E = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColAskInLast500Qty
+F = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColAskInLast1500Qty
+G = fColLTPInCurrentRow[DivideBy]fWeightedAveragePriceOfColAskInLast3000Qty
+H = fColLTPInCurrentRow[DivideBy]fMovingAverageOfLTPInLast10Secs
+I = fColLTPInCurrentRow[DivideBy]fMovingAverageOfLTPInLast100Secs
+J = fColLTPInCurrentRow[DivideBy]fMovingAverageOfLTPInLast300Secs
+K = fRatioOfBidQSumAskQSumInCurrentRow
+L = fColLTPInCurrentRow[DivideBy]fColBidP0InCurrentRow
+M = fColLTPInCurrentRow[DivideBy]fColAskP0InCurrentRow
