--- a/ob/e/3.50/design.ini
+++ b/ob/e/3.50/design.ini
@@ -20,7 +20,7 @@ feature13 = fColAskQ3InCurrentRow
 feature14 = fColAskQ4InCurrentRow
 
 feature15 = fColLTPInCurrentRow
-feature16 = fRatioOfBidQSumAskQSumInCurrentRow
+feature16 = fColBidQInCurrentRowSum[DivideBy]fColAskQInCurrentRowSum
 feature17 = fEMovingAverageOfColBidP0InLast500Rows
 feature18 = fMovingAverageOfColBidP0InLast500Rows
 
