changed according to new format

--- a/ob/e/3.3/design.ini
+++ b/ob/e/3.3/design.ini
@@ -1,4 +1,5 @@
-target =tBidEqualOrGreaterThanAskInNext100
+[target]
+buy = tBidEqualOrGreaterThanAskInNext100
 
 [features]
 feature1 = fColBidP0InCurrentRow
