--- a/ob/e/3.50/design.ini
+++ b/ob/e/3.50/design.ini
@@ -1,4 +1,5 @@
-target =  tAverageOfNFutureLTPIsGreaterThanCurrentLTP
+[target]
+buy =   tAverageOfNFutureLTPIsGreaterThanCurrentLTP
 
 [features]
 feature1 = fColBidP0InCurrentRow
