--- a/ob/e/3.591/design.ini
+++ b/ob/e/3.591/design.ini
@@ -1,4 +1,5 @@
-target =  tAverageOfNFutureLTPIsGreaterThanCurrentLTP
+[target]
+buy =   tAverageOfNFutureLTPIsGreaterThanCurrentLTP
 
 [features]
 feature1 = fColBidQ0InCurrentRow
