DS: Updated for current experiment required to run

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,7 +9,7 @@ minfds=1024                  ; (min. avail startup file descriptors;default 1024
 minprocs=200                 ; (min. avail process descriptors;default 200)
 
 [program:rsGenForAllSubE]
-command=/home/vikas/ml/src/rsGenForAllSubE.py -e /home/vikas/ml/ob/e/11/ -a glmnet -td /home/vikas/ml/ob/data/ro/20140204/ -pd /home/vikas/ml/ob/data/ro/20140205/ -g /home/vikas/ml/ob/generators/ -run real -sequence lp -targetClass multinomial
+command=src/rsGenForAllSubE.py -e ob/e/23/ -td ob/data/ro/20140203/ -pd ob/data/ro/20140313/ -dt 20 -g ob/generators/ -run real -sequence serial -targetClass binomial -tickSize 25000 -a glmnet -wt exp
 process_name=rsGenForAllSubE%(program_name)s
 numprocs=1
 ;directory=/a/path/ 
