--- a/ob/e/nsecur/live_experiment/design.ini
+++ b/ob/e/nsecur/live_experiment/design.ini
@@ -2,6 +2,9 @@
 buy = tWALTPComparedToColBidP0InFuture5000Qty
 sell = tWALTPComparedToColAskP0InFuture5000Qty
 
-[features]
+[features-buy]
+A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
+B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
+[features-sell]
 A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
 B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
