--- a/ob/e/nsefut/1/design.ini
+++ b/ob/e/nsefut/1/design.ini
@@ -1,9 +1,14 @@
 [target]
-buy = tWALTPComparedToColBidP0InFuture5000Qty
-sell = tWALTPComparedToColAskP0InFuture5000Qty
+buy = tWALTPComparedToColBidP0InFuture2000Qty
+sell = tWALTPComparedToColAskP0InFuture2000Qty
 
-[features]
+[features-buy]
 A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
-B = fColAskQInCurrentRowAvg[DivideBy]fOBWaveHistQtyOfColAskInLast15Secs[MultiplyBy]fColBidQInCurrentRowAvg[DivideBy]fOBWaveHistQtyOfColBidInLast15Secs
+B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
+
+[features-sell]
+A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
+B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
+
 
 
