--- a/ob/e/nsecur/live_experiment/design.ini
+++ b/ob/e/nsecur/live_experiment/design.ini
@@ -3,8 +3,17 @@ buy = tWALTPComparedToColBidP0InFuture2000Qty
 sell = tWALTPComparedToColAskP0InFuture2000Qty
 
 [features-buy]
-A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
-B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
+
+AmB = (fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty)[MultiplyBy](fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty)
+RAmB = fCol_FeatureAmB_InCurrentRow[DivideBy]fMovingAverageOfCol_FeatureAmB_InLast1000Rows
+
 [features-sell]
-A = fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty
-B = fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty
+
+AmB = (fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty)[MultiplyBy](fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty)
+RAmB = fCol_FeatureAmB_InCurrentRow[DivideBy]fMovingAverageOfCol_FeatureAmB_InLast1000Rows
+
+
+[intermediate-features]
+
+FeatureAmB = (fColBidP0InCurrentRow[DivideBy]fWAPriceOfColBidInLast2500Qty)[MultiplyBy](fColAskP0InCurrentRow[DivideBy]fWAPriceOfColAskInLast2500Qty)
+
